# pv021-neural-network

./: .gitignore  CMakeLists.txt  README.md  a.out
src/: activation.cpp  activation_functions.cpp  image_holder.cpp  initialisation.cpp  layer.cpp  main  main.cpp  math.cpp  matrix.cpp  neural_net.cpp  neural_network.cpp  perceptron.cpp  utils.cpp
src/headers/: activation.h  image_holder.h  initialisation.h  layer.h  math.h  matrix.h  neural_network.h  solver.h  utils.h
